--- a/opencart_cucumber/test-output/SparkReport 24-09-24 14-42-28/Report/CucumberExtentReport.html
+++ b/opencart_cucumber/test-output/SparkReport 24-09-24 14-42-28/Report/CucumberExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Sept 3, 2024 09:17:34 am</span></a>
+<a href="#"><span class="badge badge-primary">Sept 24, 2024 02:42:28 pm</span></a>
 </li>
 </ul>
 </div>
@@ -92,7 +92,7 @@
           <div class="test-detail">
             <p class="name">Login with Valid Credentials</p>
             <p class="text-sm">
-              <span>9:17:35 am</span> / <span>00:00:26:843</span>
+              <span>2:42:29 pm</span> / <span>00:00:09:519</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -101,9 +101,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Login with Valid Credentials</h5>
-<span class='badge badge-success'>09.03.2024 9:17:35 am</span>
-<span class='badge badge-danger'>09.03.2024 9:18:02 am</span>
-<span class='badge badge-default'>00:00:26:843</span>
+<span class='badge badge-success'>09.24.2024 2:42:29 pm</span>
+<span class='badge badge-danger'>09.24.2024 2:42:39 pm</span>
+<span class='badge badge-default'>00:00:09:519</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -153,7 +153,7 @@
           <div class="test-detail">
             <p class="name">Account Registration</p>
             <p class="text-sm">
-              <span>9:18:02 am</span> / <span>00:00:10:181</span>
+              <span>2:42:39 pm</span> / <span>00:00:06:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -162,9 +162,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Account Registration</h5>
-<span class='badge badge-success'>09.03.2024 9:18:02 am</span>
-<span class='badge badge-danger'>09.03.2024 9:18:12 am</span>
-<span class='badge badge-default'>00:00:10:181</span>
+<span class='badge badge-success'>09.24.2024 2:42:39 pm</span>
+<span class='badge badge-danger'>09.24.2024 2:42:45 pm</span>
+<span class='badge badge-default'>00:00:06:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=13</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -255,7 +255,7 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>09:17:35 am</td>
+<td>14:42:29 pm</td>
 <td>
 <a href="#" class="linked" test-id='1' id='2'>Successful Login with Valid Credentials</a>
 <div class="">
@@ -265,7 +265,7 @@
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>09:18:02 am</td>
+<td>14:42:39 pm</td>
 <td>
 <a href="#" class="linked" test-id='13' id='14'>Successful Account Registration</a>
 <div class="">
@@ -301,7 +301,7 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>09:17:35 am</td>
+<td>14:42:29 pm</td>
 <td>
 <a href="#" class="linked" test-id='1' id='2'>Successful Login with Valid Credentials</a>
 <div class="">
@@ -326,13 +326,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Sept 3, 2024 09:17:34 am</h3>
+<h3>Sept 24, 2024 02:42:28 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Sept 3, 2024 09:18:12 am</h3>
+<h3>Sept 24, 2024 02:42:45 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -422,7 +422,7 @@
 </div></div>
 <script>
 var timeline = {
-"Login with Valid Credentials":26.843,"Account Registration":10.181
+"Login with Valid Credentials":9.519,"Account Registration":6
 };
 </script>
 <div class="row">
