--- a/opencart_cucumber/test-output/SparkReport 24-09-24 17-31-22/Report/CucumberExtentReport.html
+++ b/opencart_cucumber/test-output/SparkReport 24-09-24 17-31-22/Report/CucumberExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Sept 4, 2024 09:50:23 am</span></a>
+<a href="#"><span class="badge badge-primary">Sept 24, 2024 05:31:22 pm</span></a>
 </li>
 </ul>
 </div>
@@ -45,11 +45,6 @@
 <li class="nav-item dropdown" onclick="toggleView('test-view')">
 <a id="nav-test" class="dropdown-toggle" href="#">
 <span class="ico"><i class="fa fa-list"></i></span>
-</a>
-</li>
-<li class="nav-item dropdown" onclick="toggleView('exception-view')">
-<a id="nav-exception" class="dropdown-toggle" href="#">
-<span class="ico"><i class="fa fa-bug"></i></span>
 </a>
 </li>
 <li class="nav-item dropdown" onclick="toggleView('category-view')">
@@ -84,7 +79,7 @@
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@regression</a>
+<a class="dropdown-item" href="#">@sanity</a>
 </ul>
 </li>
 </ul>
@@ -95,9 +90,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Login with Valid Credentials</p>
+            <p class="name">Search feature</p>
             <p class="text-sm">
-              <span>9:50:26 am</span> / <span>00:00:29:919</span>
+              <span>5:31:23 pm</span> / <span>00:00:09:468</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -105,10 +100,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-fail">Login with Valid Credentials</h5>
-<span class='badge badge-success'>09.04.2024 9:50:26 am</span>
-<span class='badge badge-danger'>09.04.2024 9:50:56 am</span>
-<span class='badge badge-default'>00:00:29:919</span>
+<h5 class="test-status text-fail">Search feature</h5>
+<span class='badge badge-success'>09.24.2024 5:31:23 pm</span>
+<span class='badge badge-danger'>09.24.2024 5:31:32 pm</span>
+<span class='badge badge-default'>00:00:09:468</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -120,94 +115,47 @@
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log fail-bg mr-2">Fail</span>Login Data Driven</div>
-          <div class="status-avatar float-right mr-4">
-            <i class="fa fa-paperclip"></i>
-          </div>
+        <div class="node" id="2"><span class="badge log fail-bg mr-2">Fail</span>Search with valid ProductName</div>
       </div>
     </div>
-        <div class="scenario_outline ">
-            <div class="card-body l1">
-              <div class="card-header">
-                <div class="card-title outline-child">
-                  <div class="node" id="3"><span class="badge log fail-bg mr-2">Fail</span>Login Data Driven</div>
-                    <div class="status-avatar float-right">
-                      <i class="fa fa-paperclip"></i>
-                    </div>
-                </div>
+        <div class="">
+          <div class="card-body">
+              <div class="step pass-bg" title="stepDefinitions.LoginSteps.user_navigate_to_login_page()">
+                <span>Given the user navigates to login page</span>
+      <div>
+      </div>
               </div>
-              <div class="card-body mt-3 ">
-                  <div class="step pass-bg">
-                    <span>Given the user navigates to login page</span>
+              <div class="step pass-bg" title="stepDefinitions.LoginSteps.user_enters_email_as_and_password_as(java.lang.String,java.lang.String)">
+                <span>When user enters email as "pavanoltraining@gmail.com" and password as "test@123"</span>
       <div>
       </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>When user enters email as "pavanol@gmail.com" and password as "test123"</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And the user clicks on the Login button</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step fail-bg">
-                    <span>Then the user should be redirected to the MyAccount Page</span>
-      <div>
-        <textarea disabled class="code-block">java.lang.AssertionError: expected:<false> but was:<true>
-	at org.junit.Assert.fail(Assert.java:89)
-	at org.junit.Assert.failNotEquals(Assert.java:835)
-	at org.junit.Assert.assertEquals(Assert.java:120)
-	at org.junit.Assert.assertEquals(Assert.java:146)
-	at stepDefinitions.LoginSteps.user_navigates_to_my_account_page(LoginSteps.java:64)
-	at ✽.the user should be redirected to the MyAccount Page(file:///C:/Users/Admin/Downloads/opencart_cucumber/opencart_cucumber/./Features/Login.feature:15)
-</textarea>
-      
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>hooks.Hooks.addScreenshot(io.cucumber.java.Scenario)</span>
-      <div>Login Data Driven
-          <div class="row mb-3"><div class="col-md-3">
-<img data-featherlight='../Screenshots/embedded1.png' src="../Screenshots/embedded1.png">
-    
-    </div></div>
-</div>
-      <div>
-      </div>
-                  </div>
               </div>
-            </div>
-            <div class="card-body l1">
-              <div class="card-header">
-                <div class="card-title outline-child">
-                  <div class="node" id="14"><span class="badge log pass-bg mr-2">Pass</span>Login Data Driven</div>
-                </div>
+              <div class="step pass-bg" title="stepDefinitions.LoginSteps.click_on_login_button()">
+                <span>And the user clicks on the Login button</span>
+      <div>
+      </div>
               </div>
-              <div class="card-body mt-3 collapse">
-                  <div class="step pass-bg">
-                    <span>Given the user navigates to login page</span>
+              <div class="step pass-bg" title="stepDefinitions.LoginSteps.user_navigates_to_my_account_page()">
+                <span>Then the user should be redirected to the MyAccount Page</span>
       <div>
       </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>When user enters email as "pavanoltraining@gmail.com" and password as "test@123"</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And the user clicks on the Login button</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>Then the user should be redirected to the MyAccount Page</span>
-      <div>
-      </div>
-                  </div>
               </div>
-            </div>
+              <div class="step pass-bg" title="stepDefinitions.SearchSteps.enter_any_existing_product_name_into_the_search_text_box_field(java.lang.String)">
+                <span>And Enter any existing Product name "iMac" into the Search text box field</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="stepDefinitions.SearchSteps.click_on_the_button_having_search_icon()">
+                <span>Then Click on the button having search icon</span>
+      <div>
+      </div>
+              </div>
+              <div class="step fail-bg" >
+                <span>And Searched product "iMac "should be displayed in the search results</span>
+      <div>Step undefined
+      </div>
+              </div>
+          </div>
         </div>
   </div>
 </div>
@@ -222,59 +170,7 @@
 </div>
 <div class="test-content-detail"><div class="detail-body"></div></div>
 </div></div>
-<div class="test-wrapper row view exception-view attributes-view">
-<div class="test-list">
-<div class="test-list-tools">
-<ul class="tools pull-left"><li><a href=""><span class="font-size-14">Exception</span></a></li></ul>
-<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">1</span></a></li></ul>
-</div>
-<div class="test-list-wrapper scrollable">
-<ul class="test-list-item">
-<li class="test-item">
-<div class="test-detail">
-<span class="meta">
-<span class='badge log badge-danger'>1</span>
-</span>
-<p class="name">java.lang.AssertionError</p>
-<p class="duration text-sm">1 tests</p>
-</div>
-<div class="test-contents d-none">
-<div class="info">
-<h4>java.lang.AssertionError</h4>
-<span status="fail" class='badge log badge-danger'>1 failed</span>
-</div>
-<table class='table table-sm mt-4'>
-<thead>
-<tr>
-<th class="status-col">Status</th>
-<th class="timestamp-col">Timestamp</th>
-<th>TestName</th>
-</tr>
-</thead>
-<tbody>
-<tr class="tag-test-status" status="fail">
-<td><span class="badge log fail-bg">Fail</span></td>
-<td>09:50:36 am</td>
-<td>
-<a href="#" class="linked" test-id='1' id='11'>Then the user should be redirected to the MyAccount Page</a>
-<div class="">
-<span class="badge badge-default">Login with Valid Credentials.Login Data Driven.Then the user should be redirected to the MyAccount Page</span>
-</div>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</li>
-</ul>
-</div>
-</div>
-<div class="test-content scrollable">
-<div class="test-content-detail">
-<div class="detail-body"></div>
-</div>
-</div>
-</div><div class="test-wrapper row view category-view attributes-view">
+<div class="test-wrapper row view category-view attributes-view">
 <div class="test-list">
 <div class="test-list-tools">
 <ul class="tools pull-left"><li><a href=""><span class="font-size-14">Category</span></a></li></ul>
@@ -285,16 +181,14 @@
 <li class="test-item">
 <div class="test-detail">
 <span class="meta">
-<span class='badge log pass-bg'>1</span>
 <span class='badge log badge-danger'>1</span>
 </span>
-<p class="name">@regression</p>
-<p class="duration text-sm">2 tests</p>
+<p class="name">@sanity</p>
+<p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>@regression</h4>
-<span status="pass" class='badge log pass-bg'>1 passed</span>
+<h4>@sanity</h4>
 <span status="fail" class='badge log badge-danger'>1 failed</span>
 </div>
 <table class='table table-sm mt-4'>
@@ -308,21 +202,11 @@
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>09:50:26 am</td>
+<td>17:31:23 pm</td>
 <td>
-<a href="#" class="linked" test-id='1' id='3'>Login Data Driven</a>
+<a href="#" class="linked" test-id='1' id='2'>Search with valid ProductName</a>
 <div class="">
-<span class="badge badge-default">Login with Valid Credentials.Login Data Driven</span>
-</div>
-</td>
-</tr>
-<tr class="tag-test-status" status="pass">
-<td><span class="badge log pass-bg">Pass</span></td>
-<td>09:50:48 am</td>
-<td>
-<a href="#" class="linked" test-id='1' id='14'>Login Data Driven</a>
-<div class="">
-<span class="badge badge-default">Login with Valid Credentials.Login Data Driven</span>
+<span class="badge badge-default">Search feature.Search with valid ProductName</span>
 </div>
 </td>
 </tr>
@@ -343,13 +227,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Sept 4, 2024 09:50:23 am</h3>
+<h3>Sept 24, 2024 05:31:22 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Sept 4, 2024 09:50:56 am</h3>
+<h3>Sept 24, 2024 05:31:32 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -400,9 +284,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='50%'><b>1</b> scenarios passed</small></div>
+<div><small data-tooltip='0%'><b>0</b> scenarios passed</small></div>
 <div>
-<small data-tooltip='50%'><b>1</b> scenarios failed,
+<small data-tooltip='100%'><b>1</b> scenarios failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -420,9 +304,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='88%'><b>8</b> steps passed</small></div>
+<div><small data-tooltip='85%'><b>6</b> steps passed</small></div>
 <div>
-<small data-tooltip='11%'><b>1</b> steps failed,
+<small data-tooltip='14%'><b>1</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -439,7 +323,7 @@
 </div></div>
 <script>
 var timeline = {
-"Login with Valid Credentials":29.919
+"Search feature":9.468
 };
 </script>
 <div class="row">
@@ -449,12 +333,12 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>@regression</td>
-<td>1</td>
+<td>@sanity</td>
+<td>0</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
-<td>50%</td>
+<td>0%</td>
 </tr>
 </tbody>
 </table></div>
@@ -470,13 +354,13 @@ failParent: 1,
 warningParent: 0,
 skipParent: 0,
 childCount: 5,
-passChild: 1,
+passChild: 0,
 failChild: 1,
 warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 8,
+passGrandChild: 6,
 failGrandChild: 1,
 warningGrandChild: 0,
 skipGrandChild: 0,
