--- a/opencart_cucumber/test-output/SparkReport 24-09-24 17-32-58/Report/CucumberExtentReport.html
+++ b/opencart_cucumber/test-output/SparkReport 24-09-24 17-32-58/Report/CucumberExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Sept 3, 2024 01:14:31 pm</span></a>
+<a href="#"><span class="badge badge-primary">Sept 24, 2024 05:32:58 pm</span></a>
 </li>
 </ul>
 </div>
@@ -71,7 +71,7 @@
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-exclamation-circle"></i></a>
 <ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" status="pass" href="#"><span>Pass</span><span class="status success"></span></a>
+<a class="dropdown-item" status="fail" href="#"><span>Fail</span><span class="status danger"></span></a>
 <div class="dropdown-divider"></div>
 <a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 </ul>
@@ -79,31 +79,31 @@
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@sanity</a><a class="dropdown-item" href="#">@regression</a>
+<a class="dropdown-item" href="#">@sanity</a>
 </ul>
 </li>
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="pass" test-id="1"
+        <li class="test-item"  status="fail" test-id="1"
           author=""
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Login with Valid Credentials</p>
+            <p class="name">Search feature</p>
             <p class="text-sm">
-              <span>1:14:33 pm</span> / <span>00:00:14:747</span>
-              <span class="badge pass-bg log float-right">Pass</span>
+              <span>5:32:59 pm</span> / <span>00:00:07:095</span>
+              <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
           <div class="test-contents d-none">
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Login with Valid Credentials</h5>
-<span class='badge badge-success'>09.03.2024 1:14:33 pm</span>
-<span class='badge badge-danger'>09.03.2024 1:14:48 pm</span>
-<span class='badge badge-default'>00:00:14:747</span>
+<h5 class="test-status text-fail">Search feature</h5>
+<span class='badge badge-success'>09.24.2024 5:32:59 pm</span>
+<span class='badge badge-danger'>09.24.2024 5:33:06 pm</span>
+<span class='badge badge-default'>00:00:07:095</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -115,10 +115,10 @@
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log pass-bg mr-2">Pass</span>Successful Login with Valid Credentials</div>
+        <div class="node" id="2"><span class="badge log fail-bg mr-2">Fail</span>Search with valid ProductName</div>
       </div>
     </div>
-        <div class="collapse">
+        <div class="">
           <div class="card-body">
               <div class="step pass-bg" title="stepDefinitions.LoginSteps.user_navigate_to_login_page()">
                 <span>Given the user navigates to login page</span>
@@ -140,6 +140,21 @@
       <div>
       </div>
               </div>
+              <div class="step pass-bg" title="stepDefinitions.SearchSteps.enter_any_existing_product_name_into_the_search_text_box_field(java.lang.String)">
+                <span>And Enter any existing Product name "iMac" into the Search text box field</span>
+      <div>
+      </div>
+              </div>
+              <div class="step pass-bg" title="stepDefinitions.SearchSteps.click_on_the_button_having_search_icon()">
+                <span>Then Click on the button having search icon</span>
+      <div>
+      </div>
+              </div>
+              <div class="step fail-bg" >
+                <span>And Searched product "iMac "should be displayed in the search results</span>
+      <div>Step undefined
+      </div>
+              </div>
           </div>
         </div>
   </div>
@@ -159,14 +174,14 @@
 <div class="test-list">
 <div class="test-list-tools">
 <ul class="tools pull-left"><li><a href=""><span class="font-size-14">Category</span></a></li></ul>
-<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">2</span></a></li></ul>
+<ul class="tools text-right"><li><a href="#"><span class="badge badge-primary">1</span></a></li></ul>
 </div>
 <div class="test-list-wrapper scrollable">
 <ul class="test-list-item">
 <li class="test-item">
 <div class="test-detail">
 <span class="meta">
-<span class='badge log pass-bg'>1</span>
+<span class='badge log badge-danger'>1</span>
 </span>
 <p class="name">@sanity</p>
 <p class="duration text-sm">1 tests</p>
@@ -174,7 +189,7 @@
 <div class="test-contents d-none">
 <div class="info">
 <h4>@sanity</h4>
-<span status="pass" class='badge log pass-bg'>1 passed</span>
+<span status="fail" class='badge log badge-danger'>1 failed</span>
 </div>
 <table class='table table-sm mt-4'>
 <thead>
@@ -185,49 +200,13 @@
 </tr>
 </thead>
 <tbody>
-<tr class="tag-test-status" status="pass">
-<td><span class="badge log pass-bg">Pass</span></td>
-<td>13:14:33 pm</td>
+<tr class="tag-test-status" status="fail">
+<td><span class="badge log fail-bg">Fail</span></td>
+<td>17:32:59 pm</td>
 <td>
-<a href="#" class="linked" test-id='1' id='2'>Successful Login with Valid Credentials</a>
+<a href="#" class="linked" test-id='1' id='2'>Search with valid ProductName</a>
 <div class="">
-<span class="badge badge-default">Login with Valid Credentials.Successful Login with Valid Credentials</span>
-</div>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</li>
-<li class="test-item">
-<div class="test-detail">
-<span class="meta">
-<span class='badge log pass-bg'>1</span>
-</span>
-<p class="name">@regression</p>
-<p class="duration text-sm">1 tests</p>
-</div>
-<div class="test-contents d-none">
-<div class="info">
-<h4>@regression</h4>
-<span status="pass" class='badge log pass-bg'>1 passed</span>
-</div>
-<table class='table table-sm mt-4'>
-<thead>
-<tr>
-<th class="status-col">Status</th>
-<th class="timestamp-col">Timestamp</th>
-<th>TestName</th>
-</tr>
-</thead>
-<tbody>
-<tr class="tag-test-status" status="pass">
-<td><span class="badge log pass-bg">Pass</span></td>
-<td>13:14:33 pm</td>
-<td>
-<a href="#" class="linked" test-id='1' id='2'>Successful Login with Valid Credentials</a>
-<div class="">
-<span class="badge badge-default">Login with Valid Credentials.Successful Login with Valid Credentials</span>
+<span class="badge badge-default">Search feature.Search with valid ProductName</span>
 </div>
 </td>
 </tr>
@@ -248,25 +227,25 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Sept 3, 2024 01:14:31 pm</h3>
+<h3>Sept 24, 2024 05:32:58 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Sept 3, 2024 01:14:48 pm</h3>
+<h3>Sept 24, 2024 05:33:06 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-pass">Features Passed</p>
-<h3>1</h3>
+<h3>0</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0 text-fail">Features Failed</p>
-<h3>0</h3>
+<h3>1</h3>
 </div></div>
 </div>
 </div>
@@ -282,12 +261,12 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'>
-<b>1</b> features passed
+<div><small data-tooltip='0%'>
+<b>0</b> features passed
 </small>
 </div>
 <div>
-<small data-tooltip='0%'><b>0</b> features failed,
+<small data-tooltip='100%'><b>1</b> features failed,
 <b>0</b> skipped, <b data-tooltip='0%'>0</b> others
 </small>
 </div>
@@ -305,9 +284,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>1</b> scenarios passed</small></div>
+<div><small data-tooltip='0%'><b>0</b> scenarios passed</small></div>
 <div>
-<small data-tooltip='0%'><b>0</b> scenarios failed,
+<small data-tooltip='100%'><b>1</b> scenarios failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -325,9 +304,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='100%'><b>4</b> steps passed</small></div>
+<div><small data-tooltip='85%'><b>6</b> steps passed</small></div>
 <div>
-<small data-tooltip='0%'><b>0</b> steps failed,
+<small data-tooltip='14%'><b>1</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -344,7 +323,7 @@
 </div></div>
 <script>
 var timeline = {
-"Login with Valid Credentials":14.747
+"Search feature":7.095
 };
 </script>
 <div class="row">
@@ -355,19 +334,11 @@ var timeline = {
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
 <td>@sanity</td>
+<td>0</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
-<td>0</td>
-<td>100%</td>
-</tr>
-<tr>
-<td>@regression</td>
-<td>1</td>
-<td>0</td>
-<td>0</td>
-<td>0</td>
-<td>100%</td>
+<td>0%</td>
 </tr>
 </tbody>
 </table></div>
@@ -378,19 +349,19 @@ var timeline = {
 <script>
 var statusGroup = {
 parentCount: 5,
-passParent: 1,
-failParent: 0,
+passParent: 0,
+failParent: 1,
 warningParent: 0,
 skipParent: 0,
 childCount: 5,
-passChild: 1,
-failChild: 0,
+passChild: 0,
+failChild: 1,
 warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 4,
-failGrandChild: 0,
+passGrandChild: 6,
+failGrandChild: 1,
 warningGrandChild: 0,
 skipGrandChild: 0,
 infoGrandChild: 0,
