--- a/opencart_cucumber/test-output/SparkReport 24-09-24 17-34-13/Report/CucumberExtentReport.html
+++ b/opencart_cucumber/test-output/SparkReport 24-09-24 17-34-13/Report/CucumberExtentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Sept 3, 2024 07:34:49 pm</span></a>
+<a href="#"><span class="badge badge-primary">Sept 24, 2024 05:34:13 pm</span></a>
 </li>
 </ul>
 </div>
@@ -84,7 +84,7 @@
 <li class="dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tag"></i></a>
 <ul id="tag-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a class="dropdown-item" href="#">@regression</a>
+<a class="dropdown-item" href="#">@sanity</a>
 </ul>
 </li>
 </ul>
@@ -95,9 +95,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Login with Valid Credentials</p>
+            <p class="name">Search feature</p>
             <p class="text-sm">
-              <span>7:34:50 pm</span> / <span>00:00:24:360</span>
+              <span>5:34:14 pm</span> / <span>00:00:07:216</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -105,10 +105,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-fail">Login with Valid Credentials</h5>
-<span class='badge badge-success'>09.03.2024 7:34:50 pm</span>
-<span class='badge badge-danger'>09.03.2024 7:35:14 pm</span>
-<span class='badge badge-default'>00:00:24:360</span>
+<h5 class="test-status text-fail">Search feature</h5>
+<span class='badge badge-success'>09.24.2024 5:34:14 pm</span>
+<span class='badge badge-danger'>09.24.2024 5:34:21 pm</span>
+<span class='badge badge-default'>00:00:07:216</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -120,55 +120,99 @@
   <div class="card">
     <div class="card-header" role="tab">
       <div class="card-title">
-        <div class="node" id="2"><span class="badge log fail-bg mr-2">Fail</span>Login Data Driven</div>
+        <div class="node" id="2"><span class="badge log fail-bg mr-2">Fail</span>Search with valid ProductName</div>
           <div class="status-avatar float-right mr-4">
             <i class="fa fa-paperclip"></i>
           </div>
       </div>
     </div>
-        <div class="scenario_outline ">
-            <div class="card-body l1">
-              <div class="card-header">
-                <div class="card-title outline-child">
-                  <div class="node" id="3"><span class="badge log fail-bg mr-2">Fail</span>Login Data Driven</div>
-                    <div class="status-avatar float-right">
-                      <i class="fa fa-paperclip"></i>
-                    </div>
-                </div>
+        <div class="">
+          <div class="card-body">
+              <div class="step pass-bg" title="stepDefinitions.LoginSteps.user_navigate_to_login_page()">
+                <span>Given the user navigates to login page</span>
+      <div>
+      </div>
               </div>
-              <div class="card-body mt-3 ">
-                  <div class="step pass-bg">
-                    <span>Given the user navigates to login page</span>
+              <div class="step pass-bg" title="stepDefinitions.LoginSteps.user_enters_email_as_and_password_as(java.lang.String,java.lang.String)">
+                <span>When user enters email as "pavanoltraining@gmail.com" and password as "test@123"</span>
       <div>
       </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>When user enters email as "pavanol@gmail.com" and password as "test123"</span>
+              </div>
+              <div class="step pass-bg" title="stepDefinitions.LoginSteps.click_on_login_button()">
+                <span>And the user clicks on the Login button</span>
       <div>
       </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And the user clicks on the Login button</span>
+              </div>
+              <div class="step pass-bg" title="stepDefinitions.LoginSteps.user_navigates_to_my_account_page()">
+                <span>Then the user should be redirected to the MyAccount Page</span>
       <div>
       </div>
-                  </div>
-                  <div class="step fail-bg">
-                    <span>Then the user should be redirected to the MyAccount Page</span>
+              </div>
+              <div class="step pass-bg" title="stepDefinitions.SearchSteps.enter_any_existing_product_name_into_the_search_text_box_field(java.lang.String)">
+                <span>And Enter any existing Product name "iMac" into the Search text box field</span>
       <div>
-        <textarea disabled class="code-block">java.lang.AssertionError: expected:<false> but was:<true>
-	at org.junit.Assert.fail(Assert.java:89)
-	at org.junit.Assert.failNotEquals(Assert.java:835)
-	at org.junit.Assert.assertEquals(Assert.java:120)
-	at org.junit.Assert.assertEquals(Assert.java:146)
-	at stepDefinitions.LoginSteps.user_navigates_to_my_account_page(LoginSteps.java:64)
-	at ✽.the user should be redirected to the MyAccount Page(file:///C:/Users/Admin/Downloads/opencart_cucumber/opencart_cucumber/./Features/Login.feature:15)
+      </div>
+              </div>
+              <div class="step pass-bg" title="stepDefinitions.SearchSteps.click_on_the_button_having_search_icon()">
+                <span>Then Click on the button having search icon</span>
+      <div>
+      </div>
+              </div>
+              <div class="step fail-bg" title="stepDefinitions.SearchSteps.searched_product_should_be_displayed_in_the_search_results(java.lang.String)">
+                <span>And Searched product "iMac "should be displayed in the search results</span>
+      <div>
+        <textarea disabled class="code-block">io.cucumber.core.exception.CucumberException: Step [Searched product "iMac "should be displayed in the search results] is defined with 1 parameters at 'stepDefinitions.SearchSteps.searched_product_should_be_displayed_in_the_search_results(java.lang.String)'.
+However, the gherkin step has 0 arguments.
+Step text: Searched product "iMac "should be displayed in the search results
+	at io.cucumber.core.runner.PickleStepDefinitionMatch.arityMismatch(PickleStepDefinitionMatch.java:82)
+	at io.cucumber.core.runner.PickleStepDefinitionMatch.runStep(PickleStepDefinitionMatch.java:41)
+	at io.cucumber.core.runner.ExecutionMode$1.execute(ExecutionMode.java:10)
+	at io.cucumber.core.runner.TestStep.executeStep(TestStep.java:81)
+	at io.cucumber.core.runner.TestStep.run(TestStep.java:53)
+	at io.cucumber.core.runner.PickleStepTestStep.run(PickleStepTestStep.java:51)
+	at io.cucumber.core.runner.TestCase.run(TestCase.java:84)
+	at io.cucumber.core.runner.Runner.runPickle(Runner.java:75)
+	at io.cucumber.junit.PickleRunners$NoStepDescriptions.lambda$run$0(PickleRunners.java:151)
+	at io.cucumber.core.runtime.CucumberExecutionContext.lambda$runTestCase$5(CucumberExecutionContext.java:136)
+	at io.cucumber.core.runtime.RethrowingThrowableCollector.executeAndThrow(RethrowingThrowableCollector.java:23)
+	at io.cucumber.core.runtime.CucumberExecutionContext.runTestCase(CucumberExecutionContext.java:136)
+	at io.cucumber.junit.PickleRunners$NoStepDescriptions.run(PickleRunners.java:148)
+	at io.cucumber.junit.FeatureRunner.runChild(FeatureRunner.java:144)
+	at io.cucumber.junit.FeatureRunner.runChild(FeatureRunner.java:28)
+	at org.junit.runners.ParentRunner$4.run(ParentRunner.java:331)
+	at org.junit.runners.ParentRunner$1.schedule(ParentRunner.java:79)
+	at org.junit.runners.ParentRunner.runChildren(ParentRunner.java:329)
+	at org.junit.runners.ParentRunner.access$100(ParentRunner.java:66)
+	at org.junit.runners.ParentRunner$2.evaluate(ParentRunner.java:293)
+	at org.junit.runners.ParentRunner$3.evaluate(ParentRunner.java:306)
+	at org.junit.runners.ParentRunner.run(ParentRunner.java:413)
+	at io.cucumber.junit.FeatureRunner.run(FeatureRunner.java:137)
+	at io.cucumber.junit.Cucumber.runChild(Cucumber.java:196)
+	at io.cucumber.junit.Cucumber.runChild(Cucumber.java:89)
+	at org.junit.runners.ParentRunner$4.run(ParentRunner.java:331)
+	at org.junit.runners.ParentRunner$1.schedule(ParentRunner.java:79)
+	at org.junit.runners.ParentRunner.runChildren(ParentRunner.java:329)
+	at org.junit.runners.ParentRunner.access$100(ParentRunner.java:66)
+	at org.junit.runners.ParentRunner$2.evaluate(ParentRunner.java:293)
+	at io.cucumber.core.runtime.CucumberExecutionContext.lambda$runFeatures$6(CucumberExecutionContext.java:147)
+	at io.cucumber.core.runtime.CucumberExecutionContext.execute(CucumberExecutionContext.java:162)
+	at io.cucumber.core.runtime.CucumberExecutionContext.runFeatures(CucumberExecutionContext.java:145)
+	at io.cucumber.junit.Cucumber$StartAndFinishTestRun.evaluate(Cucumber.java:226)
+	at org.junit.runners.ParentRunner$3.evaluate(ParentRunner.java:306)
+	at org.junit.runners.ParentRunner.run(ParentRunner.java:413)
+	at org.eclipse.jdt.internal.junit4.runner.JUnit4TestReference.run(JUnit4TestReference.java:93)
+	at org.eclipse.jdt.internal.junit.runner.TestExecution.run(TestExecution.java:40)
+	at org.eclipse.jdt.internal.junit.runner.RemoteTestRunner.runTests(RemoteTestRunner.java:529)
+	at org.eclipse.jdt.internal.junit.runner.RemoteTestRunner.runTests(RemoteTestRunner.java:757)
+	at org.eclipse.jdt.internal.junit.runner.RemoteTestRunner.run(RemoteTestRunner.java:452)
+	at org.eclipse.jdt.internal.junit.runner.RemoteTestRunner.main(RemoteTestRunner.java:210)
 </textarea>
       
       </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>hooks.Hooks.addScreenshot(io.cucumber.java.Scenario)</span>
-      <div>Login Data Driven
+              </div>
+              <div class="step pass-bg" title="AFTER_STEP">
+                <span>hooks.Hooks.addScreenshot(io.cucumber.java.Scenario)</span>
+      <div>Search with valid ProductName
           <div class="row mb-3"><div class="col-md-3">
 <img data-featherlight='../Screenshots/embedded1.png' src="../Screenshots/embedded1.png">
     
@@ -176,38 +220,8 @@
 </div>
       <div>
       </div>
-                  </div>
               </div>
-            </div>
-            <div class="card-body l1">
-              <div class="card-header">
-                <div class="card-title outline-child">
-                  <div class="node" id="14"><span class="badge log pass-bg mr-2">Pass</span>Login Data Driven</div>
-                </div>
-              </div>
-              <div class="card-body mt-3 collapse">
-                  <div class="step pass-bg">
-                    <span>Given the user navigates to login page</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>When user enters email as "pavanoltraining@gmail.com" and password as "test@123"</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>And the user clicks on the Login button</span>
-      <div>
-      </div>
-                  </div>
-                  <div class="step pass-bg">
-                    <span>Then the user should be redirected to the MyAccount Page</span>
-      <div>
-      </div>
-                  </div>
-              </div>
-            </div>
+          </div>
         </div>
   </div>
 </div>
@@ -235,12 +249,12 @@
 <span class="meta">
 <span class='badge log badge-danger'>1</span>
 </span>
-<p class="name">java.lang.AssertionError</p>
+<p class="name">io.cucumber.core.exception.CucumberException</p>
 <p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>java.lang.AssertionError</h4>
+<h4>io.cucumber.core.exception.CucumberException</h4>
 <span status="fail" class='badge log badge-danger'>1 failed</span>
 </div>
 <table class='table table-sm mt-4'>
@@ -254,11 +268,11 @@
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>19:34:57 pm</td>
+<td>17:34:21 pm</td>
 <td>
-<a href="#" class="linked" test-id='1' id='11'>Then the user should be redirected to the MyAccount Page</a>
+<a href="#" class="linked" test-id='1' id='16'>And Searched product "iMac "should be displayed in the search results</a>
 <div class="">
-<span class="badge badge-default">Login with Valid Credentials.Login Data Driven.Then the user should be redirected to the MyAccount Page</span>
+<span class="badge badge-default">Search feature.Search with valid ProductName.And Searched product "iMac "should be displayed in the search results</span>
 </div>
 </td>
 </tr>
@@ -285,16 +299,14 @@
 <li class="test-item">
 <div class="test-detail">
 <span class="meta">
-<span class='badge log pass-bg'>1</span>
 <span class='badge log badge-danger'>1</span>
 </span>
-<p class="name">@regression</p>
-<p class="duration text-sm">2 tests</p>
+<p class="name">@sanity</p>
+<p class="duration text-sm">1 tests</p>
 </div>
 <div class="test-contents d-none">
 <div class="info">
-<h4>@regression</h4>
-<span status="pass" class='badge log pass-bg'>1 passed</span>
+<h4>@sanity</h4>
 <span status="fail" class='badge log badge-danger'>1 failed</span>
 </div>
 <table class='table table-sm mt-4'>
@@ -308,21 +320,11 @@
 <tbody>
 <tr class="tag-test-status" status="fail">
 <td><span class="badge log fail-bg">Fail</span></td>
-<td>19:34:50 pm</td>
+<td>17:34:14 pm</td>
 <td>
-<a href="#" class="linked" test-id='1' id='3'>Login Data Driven</a>
+<a href="#" class="linked" test-id='1' id='2'>Search with valid ProductName</a>
 <div class="">
-<span class="badge badge-default">Login with Valid Credentials.Login Data Driven</span>
-</div>
-</td>
-</tr>
-<tr class="tag-test-status" status="pass">
-<td><span class="badge log pass-bg">Pass</span></td>
-<td>19:35:09 pm</td>
-<td>
-<a href="#" class="linked" test-id='1' id='14'>Login Data Driven</a>
-<div class="">
-<span class="badge badge-default">Login with Valid Credentials.Login Data Driven</span>
+<span class="badge badge-default">Search feature.Search with valid ProductName</span>
 </div>
 </td>
 </tr>
@@ -343,13 +345,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Sept 3, 2024 07:34:49 pm</h3>
+<h3>Sept 24, 2024 05:34:13 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Sept 3, 2024 07:35:14 pm</h3>
+<h3>Sept 24, 2024 05:34:22 pm</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -400,9 +402,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='50%'><b>1</b> scenarios passed</small></div>
+<div><small data-tooltip='0%'><b>0</b> scenarios passed</small></div>
 <div>
-<small data-tooltip='50%'><b>1</b> scenarios failed,
+<small data-tooltip='100%'><b>1</b> scenarios failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -420,9 +422,9 @@
 </div>
 </div>
 <div class="card-footer">
-<div><small data-tooltip='88%'><b>8</b> steps passed</small></div>
+<div><small data-tooltip='87%'><b>7</b> steps passed</small></div>
 <div>
-<small data-tooltip='11%'><b>1</b> steps failed,
+<small data-tooltip='12%'><b>1</b> steps failed,
 <b>0</b> skipped, <b data-tooltip='%'>0</b> others
 </small>
 </div>
@@ -439,7 +441,7 @@
 </div></div>
 <script>
 var timeline = {
-"Login with Valid Credentials":24.36
+"Search feature":7.216
 };
 </script>
 <div class="row">
@@ -449,12 +451,12 @@ var timeline = {
 <div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
 <thead><tr class="bg-gray"><th>Name</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>Others</th><th>Passed %</th></tr></thead><tbody>
 <tr>
-<td>@regression</td>
-<td>1</td>
+<td>@sanity</td>
+<td>0</td>
 <td>1</td>
 <td>0</td>
 <td>0</td>
-<td>50%</td>
+<td>0%</td>
 </tr>
 </tbody>
 </table></div>
@@ -470,13 +472,13 @@ failParent: 1,
 warningParent: 0,
 skipParent: 0,
 childCount: 5,
-passChild: 1,
+passChild: 0,
 failChild: 1,
 warningChild: 0,
 skipChild: 0,
 infoChild: 0,
 grandChildCount: 5,
-passGrandChild: 8,
+passGrandChild: 7,
 failGrandChild: 1,
 warningGrandChild: 0,
 skipGrandChild: 0,
